2.2b2: Cryolo script updates:
    1) cryolo 1.8+ required
    2) input is a star file
    3) use scratch SSD for filtered mics
    4) use --skip and --write_empty to skip done mics
    5) register output in .Nodes for Relion GUI
2.2b1: Helical picking mode added
2.1.1:
    - Fix: Falcon 4 non-EER movies case now works
2.1:
    - Cryolo / LoGpicker added back as an option
    - Add input picker model for crYOLO / Topaz
    - Watcher mode not tested yet
    - fix calculation of number of EER frames
    - add 3D steps switch (not used yet)
2.0:
    - Relion 4.0 support with the new scheduler, old Schedules removed, Relion 3.x is not supported!
    - Topaz / 2D cls selection is now run by Relion
    - tif/mrc parsers updated, add EER support
1.1: fix installer
1.0:
    - separate mdoc parser, enable bigtiff header parser
    - add Cryoassess for 2D cls sorting, use it by default
    - create backup_selection.star so that user can see selected 2D classes
    - create .gui_projectdir to automatically "start" a new project
    - create .gui_manualpickjob.star so that user can visualize picking
    - sortcl2d job check for accuracy
    - add FEI MRC2 extended header support
    - replace Ctffind & Gctf paths by shell vars
    - switch off debug for release
    - update Scipion template
    - update documentation
0.9.10:
    - cleanup filtered mics for topaz and cryolo
    - add distance arg = half box size (when provided) to cryolo job
    - remove wait time
    - add a counter to stop preprocess schedule if no new mics after 2 hours
0.9.9:
    - add different picker options: cryolo, topaz, logpicker
    - add back the boxsize options to GUI
    - simplified Schedules: preprocess (3 options) and class2d. No cryolo retraining is used for now.
    - add parser tests
0.9.8:
    - update Scipion template, fixes for SerialEM option after 0.9.7
    - prints job time for external jobs
    - fix "wrong" cryolo model, gpu args
    - add topaz external job (not ready yet)